Fix events list running too long on small devices (#117)

--- a/src/features/Events.module.css
+++ b/src/features/Events.module.css
@@ -4,6 +4,18 @@
   margin-left: 0;
 }
 
+.listItem {
+  margin: 0;
+}
+
+.listItem > *:first-child {
+  padding-left: 0;
+}
+
+.listItem > *:last-child {
+  padding-right: 0;
+}
+
 .eventDate {
   flex: 1 0;
   padding-right: 0;
@@ -12,6 +24,7 @@
 
 .eventName {
   overflow: hidden;
+  width: 0;
   flex: 1 0;
   flex-grow: 1000;
   padding-right: 0;
